final-tw+sd